// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component should render Button 1`] = `
<DocumentFragment>
  <button
    class="button"
    type="button"
  />
</DocumentFragment>
`;

exports[`Button component should render contained Button 1`] = `
<DocumentFragment>
  <button
    class="button button--contained"
    type="button"
  />
</DocumentFragment>
`;

exports[`Button component should render outlined Button 1`] = `
<DocumentFragment>
  <button
    class="button button--outlined"
    type="button"
  />
</DocumentFragment>
`;
